fixed top and bottom logo spacing

--- a/wp-content/themes/mitm/assets/sass/global/_header.scss
+++ b/wp-content/themes/mitm/assets/sass/global/_header.scss
@@ -227,7 +227,7 @@
     .header-section {
         padding: 0;
         .logo {
-            margin: 14px 0 0 56px;
+            margin: 12px 0 0 56px;
             //@include size(78px, auto);
             @extend %pull-left;
             a {
